--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-vim-wasm": "^0.1.4"
+    "vim-wasm": "^0.0.13"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
